--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-life-of-John-Metcalf-commonly-called-Blind-Jack-of-Knaresborough-with-anecdotes-of-his-ex__69595
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 69595-h/images/cover.jpg
 creator:
   author:
     agent_name: Metcalf, John
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/55307
     wikipedia: https://en.wikipedia.org/wiki/John_Metcalf_(civil_engineer)
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/69595#The-life-of-John-Metcalf-commonly-called-Blind-Jack-of-Knaresborough-with-anecdotes-of-his-ex_
 gutenberg_issued: '2022-12-20'
 identifiers:
   gutenberg: '69595'
